# toml-f

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  ADDITIONAL_EDGE_CASES.md  AGENTS.md  CMakeLists.txt  CONTRIBUTING.adoc  CONTRIBUTING.md  COVERAGE_ANALYSIS.md  LICENSE-MIT  README.adoc  README.md  build.sh  docs.md  fpm.toml  index.html  meson.build  meson_options.txt  search.html
config/: CMakeLists.txt  install-mod.py  meson.build  template-targets.cmake
config/cmake/: Findtest-drive.cmake
doc/: .gitignore  conf.py  external.rst  index.rst  requirements.txt
interface/: add_array.html  add_keyval.html  add_table.html  compare_less.html  get_value.html  get_value~2.html  get_value~3.html  get_value~4.html  initialized.html  initialized~2.html  len.html  new.html  new~2.html  new~3.html  new~4.html  operator(+).html  operator(==).html  operator(SLASHSLASH).html  render.html  resize.html  resize~2.html  set_value.html  set_value~2.html  set_value~3.html  set_value~4.html  sort.html  to_string.html  to_string~2.html  toml_array.html  toml_datetime.html  toml_diagnostic.html  toml_dump.html  toml_dumps.html  toml_label.html  toml_load.html  toml_loads.html  toml_merge_config.html  toml_parse.html  toml_parser_config.html  toml_path.html  (+4 more)
lists/: absint.html  files.html  modules.html  procedures.html  types.html
module/: tomlf.html  tomlf_all.html  tomlf_build.html  tomlf_build_array.html  tomlf_build_keyval.html  tomlf_build_merge.html  tomlf_build_path.html  tomlf_build_table.html  tomlf_constants.html  tomlf_datetime.html  tomlf_de.html  tomlf_de_abc.html  tomlf_de_context.html  tomlf_de_lexer.html  tomlf_de_parser.html  tomlf_de_token.html  tomlf_diagnostic.html  tomlf_error.html  tomlf_ser.html  tomlf_structure.html  tomlf_structure_array_list.html  tomlf_structure_list.html  tomlf_structure_map.html  tomlf_structure_node.html  tomlf_structure_ordered_map.html  tomlf_terminal.html  tomlf_type.html  tomlf_type_array.html  tomlf_type_keyval.html  tomlf_type_table.html  tomlf_type_value.html  tomlf_utils.html  tomlf_utils_io.html  tomlf_utils_sort.html  tomlf_version.html
proc/: cast_to_array.html  cast_to_keyval.html  cast_to_table.html  escape.html  get_tomlf_version.html  has_date.html  has_time.html  is_array_of_tables.html  make_error.html  make_error~2.html  merge_array.html  merge_table.html  new_array.html  new_array_list.html  new_keyval.html  new_lexer_from_file.html  new_lexer_from_string.html  new_lexer_from_unit.html  new_list_structure.html  new_map_structure.html  new_ordered_map.html  new_serializer.html  new_table.html  parse.html  read_whole_file.html  read_whole_line.html  resize.html  resize~2.html  stringify.html  toml_escape_string.html  toml_serialize.html
search/: search_database.json
sourcefile/: abc.f90.html  all.f90.html  array.f90.html  array.f90~2.html  array_list.f90.html  build.f90.html  constants.f90.html  context.f90.html  datetime.f90.html  de.f90.html  diagnostic.f90.html  error.f90.html  io.f90.html  keyval.f90.html  keyval.f90~2.html  lexer.f90.html  list.f90.html  map.f90.html  merge.f90.html  node.f90.html  ordered_map.f90.html  parser.f90.html  path.f90.html  ser.f90.html  sort.f90.html  structure.f90.html  table.f90.html  table.f90~2.html  terminal.f90.html  token.f90.html  tomlf.f90.html  type.f90.html  utils.f90.html  value.f90.html  version.f90.html
src/: CMakeLists.txt  abc.f90  all.f90  array.f90  build.f90  constants.f90  datetime.f90  diagnostic.f90  error.f90  io.f90  keyval.f90  list.f90  map.f90  merge.f90  meson.build  node.f90  ser.f90  structure.f90  table.f90  terminal.f90  test.F90  test.f90  tomlf.f90  tomlf08.F90  tomlf08.f90  tomlf08_constants.F90  tomlf08_constants.f90  tomlf08_de.F90  tomlf08_ser.F90  tomlf08_ser.f90  tomlf08_type.F90  tomlf08_utils.F90  tomlf08_utils.f90  type.f90  utils.f90  value.f90  version.f90
src/de/: character.f90  tokenizer.f90
src/structure/: meson.build  vector.f90
src/tomlf/: CMakeLists.txt  all.f90  build.f90  constants.f90  datetime.f90  de.f90  diagnostic.f90  error.f90  meson.build  ser.f90  structure.f90  terminal.f90  type.f90  utils.f90  version.f90
src/tomlf/de/: CMakeLists.txt  abc.f90  character.f90  context.f90  lexer.f90  meson.build  parser.f90  token.f90  tokenizer.f90
src/tomlf/structure/: CMakeLists.txt  array_list.f90  base.f90  list.f90  map.f90  meson.build  ordered_map.f90  vector.f90
src/tomlf/type/: CMakeLists.txt  array.f90  keyval.f90  meson.build  table.f90  value.f90
src/tomlf/utils/: CMakeLists.txt  convert.f90  io.f90  meson.build  sort.f90  verify.f90
src/type/: array.f90  table.f90  value.f90
src/utils/: verify.f90
subprojects/: .gitignore  test-drive.wrap  toml-test-1.1.0.wrap  toml-tests.wrap
subprojects/packagefiles/toml-test-1.1.0/: go-wrapper.py  meson.build
test/: CMakeLists.txt  array.f90  de.f90  example.f90  fpm.f90  json.f90  json2toml.f90  json_de.f90  json_ser.f90  meson.build  table.f90  tftest.f90  toml2json.f90  version.f90
test/compliance/: CMakeLists.txt  json2toml.f90  json_de.f90  json_lexer.f90  json_parser.f90  json_ser.f90  meson.build  toml2json.f90
test/example-1/: README.md  fpm.toml  meson.build  package-1.toml  package-2.toml
test/example-1/app/: main.f90  meson.build
test/example-1/src/: meson.build  pkg.f90
test/example-1/src/pkg/: compatibility.f90  dependency.f90  error.f90  meson.build  package.f90  source.f90  toml.f90
test/export/: CMakeLists.txt  example.f90  meson.build
test/fpm/: README.md
test/fpm/app/: main.f90
test/tftest/: CMakeLists.txt  build.f90  main.f90  meson.build  sort.f90  testsuite.f90
test/unit/: CMakeLists.txt  build.f90  lexer.f90  main.f90  meson.build  parser.f90  ser.f90  sort.f90  utils.f90
test/version/: CMakeLists.txt  fpm.f90  meson.build  version.f90
testing/: decoder-test.sh  meson.build  tomlf08_json.f90
tipuesearch/: tipuesearch_content.js
type/: abstract_lexer.html  ansi_code.html  toml_array.html  toml_array_list.html  toml_context.html  toml_date.html  toml_datetime.html  toml_diagnostic.html  toml_error.html  (+19 more)
(+164 files in other folders)
