# This file is part of toml-f.
#
# Copyright (C) 2019-2020 Sebastian Ehlert
#
# toml-f is free software: you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# toml-f is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with toml-f.  If not, see <https://www.gnu.org/licenses/>.

executable('@0@-json'.format(meson.project_name()),
           files('tomlf08_json.f90'),
           dependencies: tomlf_dep)
