# This file is part of toml-f.
# SPDX-Identifier: Apache-2.0 OR MIT
#
# Licensed under either of Apache License, Version 2.0 or MIT license
# at your option; you may not use this file except in compliance with
# the License.
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

subdir('build')
subdir('de')
subdir('structure')
subdir('type')
subdir('utils')

srcs += files(
  'all.f90',
  'build.f90',
  'constants.f90',
  'datetime.f90',
  'de.f90',
  'diagnostic.f90',
  'error.f90',
  'ser.f90',
  'structure.f90',
  'terminal.f90',
  'type.f90',
  'utils.f90',
  'version.f90',
)
